unpackaged/main/default/objects/Information_Sheet__c/Information_Sheet__c.object-meta.xml
<CustomObject>
    <label>Fiche de renseignement</label>
    <nameField>
        <label>Nom Fiche de Renseignement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fiches de renseignement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>