unpackaged/main/default/objects/Information_Sheet__c/fields/Adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison__c</fullName>
    <inlineHelpText>Merci de renseigner le code postal et ville de livraison</inlineHelpText>
    <label>Adresse de livraison</label>
    <type>TextArea</type>
</CustomField>