unpackaged/main/default/objects/Information_Sheet__c/fields/Alarme_de_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Alarme_de_Temperature__c</fullName>
    <label>Alarme de Température</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>