unpackaged/main/default/objects/Information_Sheet__c/fields/Calage_a_prevoir__c.field-meta.xml
<CustomField>
    <fullName>Calage_a_prevoir__c</fullName>
    <label>Hauteur calage à prévoir (en cm)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>