unpackaged/main/default/objects/Information_Sheet__c/fields/Constraint_Precision__c.field-meta.xml
<CustomField>
    <fullName>Constraint_Precision__c</fullName>
    <inlineHelpText>Précisez les horaires ou autre</inlineHelpText>
    <label>Si Oui, Précisez</label>
    <type>TextArea</type>
</CustomField>