unpackaged/main/default/objects/Information_Sheet__c/fields/Contact_sur_Site__c.field-meta.xml
<CustomField>
    <fullName>Contact_sur_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact sur Site</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Information_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>