unpackaged/main/default/objects/Information_Sheet__c/fields/Contraintes__c.field-meta.xml
<CustomField>
    <fullName>Contraintes__c</fullName>
    <defaultValue>&quot;Si contrainte de livraison, d&#39;installation ou d&#39;accès au site merci d&#39;attacher et préciser sur le plan&quot;</defaultValue>
    <label>Contraintes</label>
    <length>225</length>
    <type>Text</type>
</CustomField>