unpackaged/main/default/objects/Information_Sheet__c/fields/Delai_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_livraison__c</fullName>
    <label>Délai de livraison</label>
    <type>TextArea</type>
</CustomField>