unpackaged/main/default/objects/Information_Sheet__c/fields/Delivery_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Constraints__c</fullName>
    <inlineHelpText>Précisez au maximum les contraintes de livraison, d&#39;installation ou d&#39;accès au site</inlineHelpText>
    <label>Contraintes à la Livraison</label>
    <type>TextArea</type>
</CustomField>