unpackaged/main/default/objects/Information_Sheet__c/fields/Door_Types__c.field-meta.xml
<CustomField>
    <fullName>Door_Types__c</fullName>
    <label>Types de Portes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Porte ouverture facile Int/Ext</fullName>
            </value>
            <value>
                <fullName>Porte 1400 x 2200mm (1 Battant)</fullName>
            </value>
            <value>
                <fullName>Porte 2000 x 2200mm (2 Battants)</fullName>
            </value>
            <value>
                <fullName>Porte Coulissante 2000 x 2200mm</fullName>
            </value>
            <value>
                <fullName>Porte Sortie de Secours 950x2200mm</fullName>
            </value>
            <value>
                <fullName>Porte Sectionnelle 1900x2300mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>