unpackaged/main/default/objects/Information_Sheet__c/fields/Duree_Location__c.field-meta.xml
<CustomField>
    <fullName>Duree_Location__c</fullName>
    <inlineHelpText>Pour sélectionner plusieurs durées, cliquez sur CTRL+ Clic droit de votre souris</inlineHelpText>
    <label>Durée Location (CTRL + clic)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 ans</fullName>
            </value>
            <value>
                <fullName>3 ans</fullName>
            </value>
            <value>
                <fullName>4 ans</fullName>
            </value>
            <value>
                <fullName>5 ans</fullName>
                <default>true</default>
                <label>5 ans</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>