unpackaged/main/default/objects/Information_Sheet__c/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <label>Email Contact</label>
    <length>225</length>
    <type>Text</type>
</CustomField>