unpackaged/main/default/objects/Information_Sheet__c/fields/Hauteur_des_bequilles_a_prevoir__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_des_bequilles_a_prevoir__c</fullName>
    <label>Hauteur Béquilles</label>
    <length>225</length>
    <type>Text</type>
</CustomField>