unpackaged/main/default/objects/Information_Sheet__c/fields/Horaire_Fin_de_Travail__c.field-meta.xml
<CustomField>
    <fullName>Horaire_Fin_de_Travail__c</fullName>
    <label>Horaire Fin de Travail</label>
    <type>Time</type>
</CustomField>