unpackaged/main/default/objects/Information_Sheet__c/fields/Information_Sheet_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Information_Sheet_Autonumber__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Information Sheet Autonumber</label>
    <type>AutoNumber</type>
</CustomField>