unpackaged/main/default/objects/Information_Sheet__c/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Type d&#39;installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Installation</valueSetName>
    </valueSet>
</CustomField>