unpackaged/main/default/objects/Information_Sheet__c/fields/Nature_et_Poids_des_Produits_Stockes__c.field-meta.xml
<CustomField>
    <fullName>Nature_et_Poids_des_Produits_Stockes__c</fullName>
    <label>Nature et Poids des Produits Stockés</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>