unpackaged/main/default/objects/Information_Sheet__c/fields/Noise_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Noise_Reduction__c</fullName>
    <description>Site situé dans une zone d&#39;habitation, souhaitez-vous ajouter un caisson anti-bruit ?</description>
    <label>Caisson Anti-Bruit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>