unpackaged/main/default/objects/Information_Sheet__c/fields/Nom_Compte__c.field-meta.xml
<CustomField>
    <fullName>Nom_Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Information_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>