unpackaged/main/default/objects/Information_Sheet__c/fields/Nombre_de_portes_et_emplacement__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_portes_et_emplacement__c</fullName>
    <label>Nombre de portes et emplacement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>