unpackaged/main/default/objects/Information_Sheet__c/fields/Observations_Clients__c.field-meta.xml
<CustomField>
    <fullName>Observations_Clients__c</fullName>
    <label>Observations Clients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>