unpackaged/main/default/objects/Information_Sheet__c/fields/Other_Door_Types__c.field-meta.xml
<CustomField>
    <fullName>Other_Door_Types__c</fullName>
    <label>Autre Types de Portes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>