unpackaged/main/default/objects/Information_Sheet__c/fields/Plan_de_Prevention__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Prevention__c</fullName>
    <label>Plan de Prévention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>