unpackaged/main/default/objects/Information_Sheet__c/fields/Prevoir_un_Calage__c.field-meta.xml
<CustomField>
    <fullName>Prevoir_un_Calage__c</fullName>
    <label>Prévoir un Calage ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>