unpackaged/main/default/objects/Information_Sheet__c/fields/Record_Type_Id_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id_Source__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Id Source</label>
    <type>Text</type>
</CustomField>