unpackaged/main/default/objects/Information_Sheet__c/fields/RecordTypeIdSource__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIdSource__c</fullName>
    <label>RecordTypeIdSource</label>
    <length>225</length>
    <type>Text</type>
</CustomField>