unpackaged/main/default/objects/Information_Sheet__c/fields/RMMW_Pr_fixes_ID__c.field-meta.xml
<CustomField>
    <fullName>RMMW_Pr_fixes_ID__c</fullName>
    <label>RMMW Préfixes – ID</label>
    <type>TextArea</type>
</CustomField>