unpackaged/main/default/objects/Information_Sheet__c/fields/Sens_d_ouverture_de_porte__c.field-meta.xml
<CustomField>
    <fullName>Sens_d_ouverture_de_porte__c</fullName>
    <label>Sens d’ouverture de porte</label>
    <type>TextArea</type>
</CustomField>