unpackaged/main/default/objects/Information_Sheet__c/fields/Si_Autre_Porte__c.field-meta.xml
<CustomField>
    <fullName>Si_Autre_Porte__c</fullName>
    <label>Si Autre Porte</label>
    <length>225</length>
    <type>Text</type>
</CustomField>