unpackaged/main/default/objects/Information_Sheet__c/fields/Si_Installation_Quai_Pr_ciser__c.field-meta.xml
<CustomField>
    <fullName>Si_Installation_Quai_Pr_ciser__c</fullName>
    <label>Si Installation à Quai, Préciser</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mise à quai sur les gueuses</fullName>
            </value>
            <value>
                <fullName>Mise à quai sur béquilles</fullName>
            </value>
            <value>
                <fullName>Mise à quai réalisée par le client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>