unpackaged/main/default/objects/Information_Sheet__c/fields/Siren__c.field-meta.xml
<CustomField>
    <fullName>Siren__c</fullName>
    <label>Siren</label>
    <length>225</length>
    <type>Text</type>
</CustomField>