unpackaged/main/default/objects/Information_Sheet__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À Quai</fullName>
            </value>
            <value>
                <fullName>Au Sol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>