unpackaged/main/default/objects/Information_Sheet__c/fields/Taille_plaque_de_jonction__c.field-meta.xml
<CustomField>
    <fullName>Taille_plaque_de_jonction__c</fullName>
    <label>Taille plaque de jonction</label>
    <type>TextArea</type>
</CustomField>