unpackaged/main/default/objects/Information_Sheet__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Téléphone du contact</label>
    <length>225</length>
    <type>Text</type>
</CustomField>