unpackaged/main/default/objects/Information_Sheet__c/fields/Telephone_Owner__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Owner__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone Owner</label>
    <type>Text</type>
</CustomField>