unpackaged/main/default/objects/Information_Sheet__c/fields/Type_de_Porte__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Porte__c</fullName>
    <label>Type de Porte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Door_Type</valueSetName>
    </valueSet>
</CustomField>