unpackaged/main/default/objects/Information_Sheet__c/fields/WorkHours_Delivery__c.field-meta.xml
<CustomField>
    <fullName>WorkHours_Delivery__c</fullName>
    <description>Adresse et horaires de livraison</description>
    <inlineHelpText>Adresse et horaires de livraison</inlineHelpText>
    <label>Horaire de livraison/travail</label>
    <type>TextArea</type>
</CustomField>