unpackaged/main/default/objects/Information_Sheet__c/recordTypes/Assembly_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Assembly_Sheet</fullName>
    <active>true</active>
    <label>Assembly Sheet</label>
</RecordType>