unpackaged/main/default/objects/Information_Sheet__c/recordTypes/Short_Term_Medium_Term.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Medium_Term</fullName>
    <active>true</active>
    <label>Non Standard Sheet</label>
</RecordType>