unpackaged/main/default/objects/Information_Sheet__c/validationRules/Deck_Installation_Reason_is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Deck_Installation_Reason_is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Installation_Type__c, &quot;Installation à quai&quot;)
&amp;&amp; 
 ISBLANK(TEXT(Si_Installation_Quai_Pr_ciser__c))</errorConditionFormula>
    <errorMessage>You must add a Deck description</errorMessage>
</ValidationRule>